--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Stinykbase</title>
+    <title>Stinkybase</title>
+    <link rel="icon" href="images/stinky.png" type="image/x-icon">
 </head>
 <body>
     <div class="box">
