--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Stinkybase</title>
-    <link rel="icon" href="images/stinky.png" type="image/x-icon">
+    <link rel="icon" href="images/stinky.png" type="image/png">
 </head>
 <body>
     <div class="box">
