--- a/index.html
+++ b/index.html
@@ -71,6 +71,35 @@
         <img src="images/512_60.png" alt="">
         <img src="images/512_61.png" alt="">
         <img src="images/512_62.png" alt="">
+        <img src="images/512_63.png" alt="">
+        <img src="images/512_64.png" alt="">
+        <img src="images/512_65.png" alt="">
+        <img src="images/512_66.png" alt="">
+        <img src="images/512_67.png" alt="">
+        <img src="images/512_68.png" alt="">
+        <img src="images/512_69.png" alt="">
+        <img src="images/512_70.png" alt="">
+        <img src="images/512_71.png" alt="">
+        <img src="images/512_72.png" alt="">
+        <img src="images/512_73.png" alt="">
+        <img src="images/512_74.png" alt="">
+        <img src="images/512_75.png" alt="">
+        <img src="images/512_76.png" alt="">
+        <img src="images/512_77.png" alt="">
+        <img src="images/512_78.png" alt="">
+        <img src="images/512_79.png" alt="">
+        <img src="images/512_80.png" alt="">
+        <img src="images/512_81.png" alt="">
+        <img src="images/512_82.png" alt="">
+        <img src="images/512_83.png" alt="">
+        <img src="images/512_84.png" alt="">
+        <img src="images/512_85.png" alt="">
+        <img src="images/512_86.png" alt="">
+        <img src="images/512_87.png" alt="">
+        <img src="images/512_88.png" alt="">
+        <img src="images/512_89.png" alt="">
+        <img src="images/512_90.png" alt="">
+        <img src="images/512_91.png" alt="">
 
 
     </div>
